salesforce/force-app/main/default/objects/AFM_Flight__c/AFM_Flight__c.object-meta.xml
<CustomObject>
    <description>A flight that has been the subject of a Case. One record per (icao24, callsign, origin, destination, day). Lazily created when a Case is opened.</description>
    <label>AFM Flight</label>
    <pluralLabel>AFM Flights</pluralLabel>
    <nameField>
        <displayFormat>FLT-{0000}</displayFormat>
        <label>Flight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>