salesforce/force-app/main/default/objects/AFM_Flight__c/fields/AFM_Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>AFM_Aircraft_Type__c</fullName>
    <label>Aircraft Type</label>
    <type>Text</type>
    <length>40</length>
    <description>Aircraft type designator/description.</description>
</CustomField>