salesforce/force-app/main/default/objects/AFM_Flight__c/fields/AFM_Callsign__c.field-meta.xml
<CustomField>
    <fullName>AFM_Callsign__c</fullName>
    <label>Callsign</label>
    <type>Text</type>
    <length>8</length>
    <description>Flight callsign, e.g. SWA2204.</description>
</CustomField>