salesforce/force-app/main/default/objects/AFM_Flight__c/fields/AFM_Destination_Site__c.field-meta.xml
<CustomField>
    <fullName>AFM_Destination_Site__c</fullName>
    <label>Destination Site</label>
    <type>Lookup</type>
    <referenceTo>AFM_Site__c</referenceTo>
    <relationshipLabel>Flights (Destination)</relationshipLabel>
    <relationshipName>Flights_Destination</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>