salesforce/force-app/main/default/objects/AFM_Flight__c/fields/AFM_First_Seen__c.field-meta.xml
<CustomField>
    <fullName>AFM_First_Seen__c</fullName>
    <label>First Seen</label>
    <type>DateTime</type>
    <description>First time this flight was observed by AFM.</description>
</CustomField>