salesforce/force-app/main/default/objects/AFM_Flight__c/fields/AFM_Icao24__c.field-meta.xml
<CustomField>
    <fullName>AFM_Icao24__c</fullName>
    <label>ICAO24</label>
    <type>Text</type>
    <length>6</length>
    <description>ICAO 24-bit address (hex), e.g. abc123.</description>
</CustomField>