salesforce/force-app/main/default/objects/AFM_Flight__c/fields/AFM_Operator_Icao__c.field-meta.xml
<CustomField>
    <fullName>AFM_Operator_Icao__c</fullName>
    <label>Operator ICAO</label>
    <type>Text</type>
    <length>4</length>
    <description>Operator ICAO code, e.g. SWA.</description>
</CustomField>