salesforce/force-app/main/default/objects/AFM_Flight__c/fields/AFM_Origin_Site__c.field-meta.xml
<CustomField>
    <fullName>AFM_Origin_Site__c</fullName>
    <label>Origin Site</label>
    <type>Lookup</type>
    <referenceTo>AFM_Site__c</referenceTo>
    <relationshipLabel>Flights (Origin)</relationshipLabel>
    <relationshipName>Flights_Origin</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>